<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">


    <TextView
        android:id="@+id/greetingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/text_1_section_2"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subGreetingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="serif-monospace"
        android:text="@string/text_2_section_2"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/greetingText" />

    <View
        android:id="@+id/separatorLine1"
        android:layout_width="200dp"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subGreetingText" />


    <TextView
        android:id="@+id/categoriesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="monospace"
        android:text="@string/text_3_section_2"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subGreetingText" />

    <LinearLayout
        android:id="@+id/categoryButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categoriesLabel">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easy_text"
            android:textFontWeight="700" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cheap_text"
            android:textFontWeight="700"
            tools:layout_editor_absoluteX="300dp"
            tools:layout_editor_absoluteY="150dp" />

        <Button
            android:id="@+id/Button3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/secure_text"
            android:textFontWeight="700"
            tools:layout_editor_absoluteX="160dp"
            tools:layout_editor_absoluteY="144dp" />

    </LinearLayout>


    <GridLayout
        android:id="@+id/productsGrid"
        android:layout_width="402dp"
        android:layout_height="485dp"
        android:alignmentMode="alignMargins"
        android:background="@drawable/grid_background"
        android:columnCount="2"
        android:padding="16dp"
        android:rowCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/rounded_image"
                android:clipToOutline="true"
                android:scaleType="centerCrop"
                android:src="@drawable/mobile_legends" />

            <Button
                android:id="@+id/MobileLegendsButton"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_button"
                android:backgroundTint="#BA68C8"
                android:text="@string/mobile_legends"
                android:textColor="@color/white"
                android:textFontWeight="700"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/rounded_image"
                android:clipToOutline="true"
                android:scaleType="centerCrop"
                android:src="@drawable/pubg_mobile" />

            <Button
                android:id="@+id/PubgMobileButton"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_button"
                android:backgroundTint="#BA68C8"
                android:text="@string/pubg_mobile"
                android:textColor="@android:color/white"
                android:textFontWeight="700"
                android:textSize="14sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/rounded_image"
                android:clipToOutline="true"
                android:scaleType="centerCrop"
                android:src="@drawable/genshin_impact" />

            <Button
                android:id="@+id/GenshinImpactButton"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_button"
                android:backgroundTint="#BA68C8"
                android:text="@string/genshin_impact"
                android:textColor="@android:color/white"
                android:textFontWeight="700"
                android:textSize="14sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/rounded_image"
                android:clipToOutline="true"
                android:scaleType="centerCrop"
                android:src="@drawable/honkai_star_rail" />

            <Button
                android:id="@+id/HonkaiStarRailButton"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_button"
                android:backgroundTint="#BA68C8"
                android:text="@string/honkai_star_rail"
                android:textColor="@android:color/white"
                android:textFontWeight="700"
                android:textSize="14sp" />
        </LinearLayout>

    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>