<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">


    <View
        android:id="@+id/separatorLine1"
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeText" />

    <ImageView
        android:id="@+id/cameraImage"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="120dp"
        android:scaleType="fitCenter"
        android:src="@drawable/icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginTop="68dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/service_name"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cameraImage" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/welcome_subtitle"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeText" />

    <View
        android:id="@+id/separatorLine2"
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:layout_marginTop="35dp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionText" />


    <Button
        android:id="@+id/startButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="85dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@android:color/white"
        android:text="@string/start_button"
        android:textFontWeight="900"
        android:textSize="25dp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionText" />

    <TextView
        android:id="@+id/launchText"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:text="@string/features_text"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startButton" />

    <View
        android:id="@+id/separatorLine3"
        android:layout_width="150dp"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/launchText" />

    <View
        android:id="@+id/separatorLine4"
        android:layout_width="80dp"
        android:layout_height="2dp"
        android:layout_marginTop="150dp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/launchText" />



</androidx.constraintlayout.widget.ConstraintLayout>
