<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="16dp">

    <ImageView
        android:id="@+id/gameImage"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/rounded_image"
        android:clipToOutline="true"
        android:scaleType="fitCenter"
        android:src="@drawable/honkai_star_rail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/honkai_star_rail"
        android:textColor="@android:color/white"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gameImage" />

    <View
        android:id="@+id/separatorLine1"
        android:layout_width="250dp"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gameTitle" />


    <Spinner
        android:id="@+id/HsrSpinner"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/spinner_background"
        android:spinnerMode="dropdown"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@id/topUpButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separatorLine2" />


    <Button
        android:id="@+id/topUpButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#9A3DF8"
        android:text="@string/order_text"
        android:textFontWeight="700"
        android:textSize="17sp"
        android:background="@drawable/rounded_button"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/HsrSpinner"
        app:layout_constraintTop_toBottomOf="@id/separatorLine2" />

    <View
        android:id="@+id/separatorLine2"
        android:layout_width="320dp"
        android:layout_height="3dp"
        android:layout_marginTop="28dp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gameDescription2" />

    <TextView
        android:id="@+id/gameDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:text="@string/honkai_star_rail_text_1"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gameTitle" />

    <TextView
        android:id="@+id/gameDescription2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:text="@string/honkai_star_rail_text_2"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gameDescription" />

    <View
        android:id="@+id/separatorLine3"
        android:layout_width="250dp"
        android:layout_height="3dp"
        android:layout_marginTop="120dp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separatorLine2" />


</androidx.constraintlayout.widget.ConstraintLayout>
